--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+// Custom variables
+@import 'src/styles/variables';
 
-/* Importing Bootstrap SCSS file. */
+// Bootstrap
 @import 'bootstrap/scss/bootstrap';
