alerts - only component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,7 @@
 <div class="container">
     <router-outlet></router-outlet>
 </div>
+
+<div class="position-fixed">
+    <app-alerts></app-alerts>
+</div>
