--- a/src/app/alerts/alerts.component.html
+++ b/src/app/alerts/alerts.component.html
@@ -1,3 +1,7 @@
 <p *ngFor="let alert of alertItems()">
     <ngb-alert [type]="alert.type">{{alert.message}}</ngb-alert>
 </p>
+
+@for (alert of alertItems(); track alert) {
+<ngb-alert [type]="alert.type">{{alert.message}}</ngb-alert>
+}
