--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,10 +6,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-                @for (menuItem of menuItems(); track menuItem) {
-                <li class="nav-item">
-                   <a class="nav-link" [routerLink]="menuItem.routerLink" routerLinkActive="active">{{menuItem.name}}</a>
-                </li>
+                @for (menuItem of menuItemsStore.menuItems(); track menuItem) {
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="menuItem.routerLink" routerLinkActive="active">{{menuItem.code | translate}}</a>
+                    </li>
                 }
             </ul>
         </div>
