--- a/src/app/alerts/alerts.component.html
+++ b/src/app/alerts/alerts.component.html
@@ -1,3 +1,3 @@
-@for (alert of alertItems(); track alert) {
+@for (alert of alertsStore.alerts(); track alert) {
     <ngb-alert [type]="alert.type">{{alert.message}}</ngb-alert>
 }
