--- a/src/app/participants/participants.component.html
+++ b/src/app/participants/participants.component.html
@@ -1,5 +1,19 @@
-@for (participant of participantStore.participants(); track participant) {
-    {{participant | json}}
-} @empty {
-    {{'participants.no-participants' | translate}}
-}
+<table mat-table [dataSource]="participantStore.participants()" class="mat-elevation-z8">
+    <ng-container matColumnDef="firstName">
+        <th mat-header-cell *matHeaderCellDef> First name </th>
+        <td mat-cell *matCellDef="let element">
+            {{element['firstName']}}
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef> Last name </th>
+        <td mat-cell *matCellDef="let element">
+            {{element['lastName']}}
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="['firstName', 'lastName']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['firstName', 'lastName'];"></tr>
+</table>
+
+<button mat-raised-button color="primary">Primary</button>
