--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,8 +12,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$splitwise-primary: mat.define-palette(mat.$indigo-palette);
-$splitwise-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$splitwise-primary: mat.define-palette(mat.$deep-purple-palette);
+$splitwise-accent: mat.define-palette(mat.$green-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $splitwise-warn: mat.define-palette(mat.$red-palette);
