--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    @for (menuItem of menuItemsStore.menuItems(); track menuItem) {
+    @for (menuItem of menuItems(); track menuItem) {
         <button mat-button [routerLink]="menuItem.routerLink">{{menuItem.code | translate}}</button>
     }
 </mat-toolbar>
