--- a/src/app/participants/participants.component.html
+++ b/src/app/participants/participants.component.html
@@ -1,19 +1,5 @@
-<table mat-table [dataSource]="participantStore.participants()" class="mat-elevation-z8">
-    <ng-container matColumnDef="firstName">
-        <th mat-header-cell *matHeaderCellDef> First name </th>
-        <td mat-cell *matCellDef="let element">
-            {{element['firstName']}}
-        </td>
-    </ng-container>
-    <ng-container matColumnDef="lastName">
-        <th mat-header-cell *matHeaderCellDef> Last name </th>
-        <td mat-cell *matCellDef="let element">
-            {{element['lastName']}}
-        </td>
-    </ng-container>
+<app-table [rows]="participants()" [columns]="columns"></app-table>
 
-    <tr mat-header-row *matHeaderRowDef="['firstName', 'lastName']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['firstName', 'lastName'];"></tr>
-</table>
-
-<button mat-raised-button color="primary">Primary</button>
+<button mat-fab color="primary">
+    <mat-icon>add</mat-icon>
+</button>
