--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-menu></app-menu>
 <app-alerts></app-alerts>
-<router-outlet></router-outlet>
+<div class="app-container">
+    <router-outlet></router-outlet>
+</div>
+
