--- a/src/app/participants/participants.component.html
+++ b/src/app/participants/participants.component.html
@@ -1,5 +1,13 @@
-<app-table [rows]="participants()" [columns]="columns"></app-table>
+@if (hasParticipants()) {
+    <app-table [rows]="participants()" [columns]="columns"></app-table>
+} @else {
+    <mat-card>
+        <mat-card-content>{{'no-participant' | translate}}</mat-card-content>
+    </mat-card>
+}
 
-<button mat-fab color="primary">
-    <mat-icon>add</mat-icon>
-</button>
+<div class="app-container-buttons">
+    <button mat-fab color="primary" [routerLink]="'/new-participant'">
+        <mat-icon>add</mat-icon>
+    </button>
+</div>
