refaktor (material -> ng-bootstrap)

--- a/src/app/new-participant/new-participant.component.html
+++ b/src/app/new-participant/new-participant.component.html
@@ -1,20 +1,34 @@
-<form [formGroup]="formGroup">
-    <mat-form-field appearance="outline">
-        <mat-label>{{'participant.firstName' | translate}}</mat-label>
-        <input matInput formControlName="firstName">
-    </mat-form-field>
+<app-page-title>
+    {{'new-participant.title' | translate}}
+</app-page-title>
 
-    <mat-form-field appearance="outline">
-        <mat-label>{{'participant.lastName' | translate}}</mat-label>
-        <input matInput formControlName="lastName">
-    </mat-form-field>
-</form>
+<app-card>
+    <form [formGroup]="formGroup">
+        <div class="mb-3">
+            <label for="newParticipantFirstName" class="form-label">
+                {{'participant.firstName' | translate}}
+            </label>
+            <input formControlName="firstName" class="form-control" id="newParticipantFirstName">
+        </div>
 
-<div class="app-container-buttons">
-    <button mat-fab color="basic" [routerLink]="'/participants'">
-        <mat-icon>close</mat-icon>
-    </button>
-    <button mat-fab color="primary" (click)="addParticipant()">
-        <mat-icon>done</mat-icon>
-    </button>
+        <div class="mb-3">
+            <label for="newParticipantLastName" class="form-label">
+                {{'participant.lastName' | translate}}
+            </label>
+            <input formControlName="lastName" class="form-control" id="newParticipantLastName">
+        </div>
+    </form>
+</app-card>
+
+<div class="row g-1 justify-content-end">
+    <div class="col-auto">
+        <app-button variant="danger" [routerLink]="'/participants'">
+            <app-icon icon="x-lg"></app-icon>
+        </app-button>
+    </div>
+    <div class="col-auto">
+        <app-button variant="success" (click)="addParticipant()">
+            <app-icon icon="check-lg"></app-icon>
+        </app-button>
+    </div>
 </div>
