--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-menu></app-menu>
 <app-alerts></app-alerts>
-<div class="app-container">
+<div class="container">
     <router-outlet></router-outlet>
 </div>
 
