--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,14 @@
-<mat-toolbar color="primary">
-    @for (menuItem of menuItems(); track menuItem) {
-        <button mat-button [routerLink]="menuItem.routerLink">{{menuItem.code | translate}}</button>
-    }
-</mat-toolbar>
-
-
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container">
+        <a class="navbar-brand" [routerLink]="'/'">{{'brand' | translate}}</a>
+        <ul class="navbar-nav me-auto">
+            @for (menuItem of menuItems(); track menuItem) {
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="menuItem.routerLink" routerLinkActive="active">
+                        {{menuItem.code | translate}}
+                    </a>
+                </li>
+            }
+        </ul>
+    </div>
+</nav>
